Fix intro section on safari

--- a/style/main.scss
+++ b/style/main.scss
@@ -33,6 +33,26 @@ body {
     flex-direction: column;
     height: 100vh;
   }
+  form {
+    display: flex;
+  }
+  input {
+    margin-right: var(--nav-padding);
+    border: 0;
+    padding: 0.7em 1em;
+    border-radius: 0;
+    color: var(--text-secondary);
+  }
+}
+
+#intro-form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  input, button {
+    margin: 0;
+  }
 }
 
 nav {
@@ -47,15 +67,6 @@ nav {
   #nav-container {
     display: flex;
     width: 100%;
-    form {
-      display: flex;
-    }
-    input {
-      margin-right: var(--nav-padding);
-      border: 0;
-      padding: 5px;
-      color: var(--text-secondary);
-    }
     #clearStreams {
       display: none;
     }
@@ -171,7 +182,7 @@ a {
 
 .arrowButton {
   background: var(--navButton-bg);
-  position: fixed;
+  position: absolute;
   z-index: 5;
   margin: 0;
   img {
@@ -202,17 +213,17 @@ a {
 }
 
 #intro {
-  display: block;
+  display: flex;
   align-self: center;
   align-content: center;
   flex-wrap: wrap;
   color: var(--nav-text);
-  text-align: center;
+  text-align: left;
   position: fixed;
   top: 40%;
   max-width: 50em;
   padding: 0.5em;
-  p:first-child {
+  .instructions {
     font-weight: 500;
   }
   p {
